force-app/main/default/objects/vlocity_cmt__AccountDiscount__c/vlocity_cmt__AccountDiscount__c.object-meta.xml
<CustomObject>
    <description>A standing discount granted to a customer for future purchases within a defined period of time.</description>
    <label>Account Discount</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>