force-app/main/default/objects/vlocity_cmt__AccountDiscount__c/fields/vlocity_cmt__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountId__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Discounts</relationshipLabel>
    <relationshipName>AccountDiscounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>