force-app/main/default/objects/vlocity_cmt__AccountDiscount__c/fields/vlocity_cmt__Duration__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>