force-app/main/default/objects/vlocity_cmt__AccountDiscount__c/fields/vlocity_cmt__ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ReferenceNumber__c</fullName>
    <externalId>true</externalId>
    <label>Reference Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>